// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request mapping 1`] = `
Object {
  "payload": Object {
    "emailAddress": "me@example.com",
    "role": "ADMIN",
  },
  "version": "2018-05-29",
}
`;

exports[`response mapping 1`] = `
Object {
  "emailAddress": "me@example.com",
  "role": "ADMIN",
}
`;
